nginx/warhorse.com-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: warhorse-gateway.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 3201
            path: /
